# cpe-parser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry-publish.yml  test-package.yml
cpeparser/: __init__.py  cpe.py  errors.py  parser.py  test_cpe.py
